Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.11, 12.2(EOL)
-
Can result in unexpected behaviour
Description
@@master_info_file and @@relay_log_info_file read integers (including IDs in lists) with atoi, which can only read signed 32-bits.
However, the integer fields in those files are unsigned fields, which has a higher maximum. Some of them 64-bit, too.
To demonstrate, the attached MTR test shows 2147483648 (0x8000'0000) gets reloaded as 18446744071562067968 (0xffff'ffff'8000'0000).
P.S. Nevermind the LP64 requirement in that test.
Attachments
Issue Links
- causes
-
MDEV-36141 Master & Relay Log Info: expand init_intvar_from_file from atoi to atoll
-
- Closed
-
- relates to
-
MDEV-35948 Test SHOW REPLICA STATUS with large/long result values
-
- Open
-
-
MDEV-37529 Better fit integral types for CHANGE MASTER parsing
-
- Open
-
-
MDEV-37530 Refactor Master & Relay Log info to iterable tuples
-
- Closed
-
-
MDEV-38010 Master/Relay Log Info files ignore trailing garbage and overflows in numeric lines
-
- Closed
-